syntax = "proto3";

option csharp_namespace = "VendorService";

service GrpcVendor {
	rpc GetAll (GetAllRequest) returns (VendorResponse);
}

message GetAllRequest {}

message GrpcVendorModel{
	int32 vendorId = 1;
	string name = 2;
	string publisher = 3;
}

message VendorResponse {
	repeated GrpcVendorModel vendor = 1;
}
